fix todo-1 r2
